⏲🚙 Checkpoint ./.glitch-assets:30811465/408 ./index(comments).html:30811465/443 ./index.html:30811465/1277

--- a/index(comments).html
+++ b/index(comments).html
@@ -32,7 +32,7 @@
       This is an example webpage for Art 74.<br><br>Made with <a href="https://glitch.com">Glitch</a>
       to show basic HTML and CSS.
     </p>
-    <img src="https://cdn.glitch.com/4e514084-36e3-4fc6-9016-856a0c482217%2Fascii_headshot.jpg?v=1602544896792" width="250px">
+    <img src="https://cdn.glitch.com/e49c87c2-2cd6-40fe-99cc-92f3c4a1195e%2Fthree%20humpbacks.jpg?v=1618787801656" width="250px">
     
   </body>
 </html>
