--- a/index.html
+++ b/index.html
@@ -1,16 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="utf-8">
+    <meta charset="utf-8" />
     <title>HTML + CSS For Art 74</title>
-    <link rel="stylesheet" href="/style.css">
+    <link rel="stylesheet" href="/style.css" />
     <script src="/script.js" defer></script>
   </head>
   <body>
     <h1>This is a Webpage!</h1>
     <p>
-      This is an example webpage for Art 74.<br><br>Made with <a href="https://glitch.com">Glitch</a>
+      This is an example webpage for Art 74.<br /><br />Made with
+      <a href="https://glitch.com">Glitch</a>
       to show basic HTML and CSS.
     </p>
+    <img
+      src="https://cdn.glitch.com/e49c87c2-2cd6-40fe-99cc-92f3c4a1195e%2Fthree%20humpbacks.jpg?v=1618787801656"
+      width="250px"
+    />
   </body>
 </html>
