🏙🌅 Checkpoint ./index.html:30811465/170

--- a/index.html
+++ b/index.html
@@ -17,5 +17,7 @@
       src="https://cdn.glitch.com/e49c87c2-2cd6-40fe-99cc-92f3c4a1195e%2Fthree%20humpbacks.jpg?v=1618787801656"
       width="250px"
     />
+    
+    <img src="https://cdn.glitch.com/e49c87c2-2cd6-40fe-99cc-92f3c4a1195e%2Fthree%20humpbacks.jpg?v=1618787801656" width="400px"/>
   </body>
 </html>
