🐏🎬 Checkpoint ./index.html:30811465/162

--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
   <head>
     <meta charset="utf-8" />
     <title>HTML + CSS For Art 74</title>
-    <link rel="stylesheet" href="/style.css" />
+    <link rel="stylesheet" href="style.css" />
     <script src="/script.js" defer></script>
   </head>
   <body>
-    <h1>This is a Webpage!</h1>
+    <h1>Yolande Harris's portfolio</h1>
     <p>
-      This is an example webpage for Art 74.<br /><br />Made with
+     Yolande is a lecturer of Art 74 at SJSU.<br /><br />Made with
       <a href="https://glitch.com">Glitch</a>
       to show basic HTML and CSS.
     </p>
