🐸🙎 Checkpoint ./index.html:30811465/85

--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>HTML + CSS For Art 74</title>
+    <title>Yolande Harris' Portfolio</title>
     <link rel="stylesheet" href="style.css" />
     <script src="/script.js" defer></script>
   </head>
   <body>
-    <h1>Yolande Harris's portfolio</h1>
+    <h1>About / Bio</h1>
     <p>
      Yolande is a lecturer of Art 74 at SJSU.<br /><br />Made with
       <a href="https://glitch.com">Glitch</a>
