🐙🍞 Checkpoint ./index.html:38505739/433 ./style.css:38505739/180

--- a/index.html
+++ b/index.html
@@ -2,22 +2,22 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>Yolande Harris' Portfolio</title>
+    <title>Soin An Portfolio</title>
     <link rel="stylesheet" href="style.css" />
     <script src="/script.js" defer></script>
   </head>
   <body>
     <h1>About / Bio</h1>
     <p>
-     Yolande is a lecturer of Art 74 at SJSU.<br /><br />Made with
+     Soin An is a freelance UI designer<br /><br />Made with
       <a href="https://glitch.com">Glitch</a>
       to show basic HTML and CSS.
     </p>
     <img
-      src="https://cdn.glitch.com/e49c87c2-2cd6-40fe-99cc-92f3c4a1195e%2Fthree%20humpbacks.jpg?v=1618787801656"
-      width="250px"
+      src="https://miro.medium.com/max/2000/1*SOVheF8DL1546MyeoYYCnA.jpeg"
+      width="400px"
     />
     
-    <img src="https://cdn.glitch.com/e49c87c2-2cd6-40fe-99cc-92f3c4a1195e%2Fthree%20humpbacks.jpg?v=1618787801656" width="400px"/>
+  
   </body>
 </html>
