--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
             >
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/portfolio.html">Portfolio</a>
+            <a class="nav-link" href="/portfolio/index.html">Portfolio</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="/bio.html">Bio</a>
