--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
   </head>
   <body>
     <nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top">
-      <a class="navbar-brand" href="#">Yolande Harris</a>
+      <a class="navbar-brand" href="#">Soin An</a>
       <button
         class="navbar-toggler"
         type="button"
