--- a/index.html
+++ b/index.html
@@ -100,8 +100,8 @@
       to show basic HTML and CSS.
     </p>
     <img
-      src="https://miro.medium.com/max/2000/1*SOVheF8DL1546MyeoYYCnA.jpeg"
-      width="400px"
+      src="https://cdn.glitch.me/0ec6ce21-231c-4146-8e5a-e5718f5a22f1%2Fflat-geometric-background_23-2148957201.jpg?v=1636610817859"
+      width="1280px"
     />
     <!--bootsratp-->
     <script
