🍦🏉 Checkpoint ./style.css:38505739/368 ./.glitch-assets:38505739/488 ./index.html:38505739/379

--- a/index.html
+++ b/index.html
@@ -93,16 +93,12 @@
         </form>
       </div>
     </nav>
-    <h1>About / Bio</h1>
+    <h1>Hello, this is Soin An.</h1>
     <p>
-      Soin An is a freelance UI designer<br /><br />Made with
-      <a href="https://glitch.com">Glitch</a>
-      to show basic HTML and CSS.
+      I believe creative things can change how we live<br /><br />
+      
     </p>
-    <img
-      src="https://cdn.glitch.me/0ec6ce21-231c-4146-8e5a-e5718f5a22f1%2Fflat-geometric-background_23-2148957201.jpg?v=1636610817859"
-      width="1280px"
-    />
+    
     <!--bootsratp-->
     <script
       src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
