🎗🍇 Checkpoint ./portfolio/index.html:38505739/2820 ./bio.html:38505739/92

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -101,7 +101,7 @@
       <div class="album py-5 bg-light">
         <div class="container">
           <div class="row">
-            <!-- 3Humpbacks Card Start -->
+            <!-- GIF Card Start -->
             <div class="col-md-4">
               <div class="card mb-4 shadow-sm">
                 <img
@@ -110,7 +110,7 @@
                 />
                 <div class="card-body">
                   <p class="card-text">
-                    This is my Whale project, click below for more information
+                    This is Gif projects
                   </p>
                   <div
                     class="d-flex justify-content-between align-items-center"
@@ -118,7 +118,7 @@
                     <div class="btn-group">
                       <button
                         type="button"
-                        onclick="document.location.href = '3humpbacks.html'"
+                        onclick="document.location.href = 'gif.html'"
                         class="btn btn-sm btn-outline-secondary"
                       >
                         view
@@ -128,9 +128,9 @@
                 </div>
               </div>
             </div>
-            <!-- 3Humpbacks Card End -->
+            <!-- GIF Card End -->
 
-            <!-- Jellyfishglitch Card Start -->
+            <!-- GLITCH Card Start -->
             <div class="col-md-4">
               <div class="card mb-4 shadow-sm">
                 <img
@@ -138,14 +138,14 @@
                   width="100%"
                 />
                 <div class="card-body">
-                  <p class="card-text">This is my glitch project.</p>
+                  <p class="card-text">This is Glitch project.</p>
                   <div
                     class="d-flex justify-content-between align-items-center"
                   >
                     <div class="btn-group">
                       <button
                         type="button"
-                        onclick="document.location.href = 'jellyfishglitch.html'"
+                        onclick="document.location.href = 'glitch.html'"
                         class="btn btn-sm btn-outline-secondary"
                       >
                         View
@@ -155,9 +155,9 @@
                 </div>
               </div>
             </div>
-            <!-- Jellyfishglitch Card End -->
+            <!-- glitch Card End -->
 
-            <!-- Jasminsbee Card Start -->
+            <!-- whosdown Card Start -->
             <div class="col-md-4">
               <div class="card mb-4 shadow-sm">
                 <img
@@ -165,14 +165,14 @@
                   width="100%"
                 />
                 <div class="card-body">
-                  <p class="card-text">This is my next image - it's a .gif</p>
+                  <p class="card-text">Projects - UI designs</p>
                   <div
                     class="d-flex justify-content-between align-items-center"
                   >
                     <div class="btn-group">
                       <button
                         type="button"
-                        onclick="document.location.href = 'jasminsbee.html'"
+                        onclick="document.location.href = 'whosdown.html'"
                         class="btn btn-sm btn-outline-secondary"
                       >
                         View
@@ -182,38 +182,23 @@
                 </div>
               </div>
             </div>
-            <!-- Jasminsbee Card End -->
-            <!-- New Card Start -->
+            <!-- whosdown Card End -->
+            <!-- drawing Start -->
             <div class="col-md-4">
               <div class="card mb-4 shadow-sm">
-                <svg
-                  class="bd-placeholder-img card-img-top"
+                <img
+                  src="https://cdn.glitch.com/58a399ff-c726-463e-80a0-b4a67910520d%2FJasmin's-gif.gif?v=1619397939256"
                   width="100%"
-                  height="225"
-                  xmlns="http://www.w3.org/2000/svg"
-                  preserveaspectratio="xMidYMid slice"
-                  focusable="false"
-                  role="img"
-                  aria-label="Placeholder: Thumbnail"
-                >
-                  <title>Placeholder</title>
-                  <rect width="100%" height="100%" fill="#55595c" />
-                  <text x="50%" y="50%" fill="#eceeef" dy=".3em">
-                    Thumbnail
-                  </text>
-                </svg>
+                />
                 <div class="card-body">
-                  <p class="card-text">
-                    This is a wider card with supporting text below as a natural
-                    lead-in to additional content. This content is a little bit
-                    longer.
-                  </p>
+                  <p class="card-text">This is personal drawings</p>
                   <div
                     class="d-flex justify-content-between align-items-center"
                   >
                     <div class="btn-group">
                       <button
                         type="button"
+                        onclick="document.location.href = 'drawing.html'"
                         class="btn btn-sm btn-outline-secondary"
                       >
                         View
