🕌😂 Checkpoint ./bio.html:38505739/946 ./portfolio/index.html:38505739/1279 ./.glitch-assets:38505739/1188

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -105,12 +105,12 @@
             <div class="col-md-4">
               <div class="card mb-4 shadow-sm">
                 <img
-                  src="https://cdn.glitch.com/58a399ff-c726-463e-80a0-b4a67910520d%2Fthree%20humpbacks.jpg?v=1619397858026"
+                  src="https://cdn.glitch.me/0ec6ce21-231c-4146-8e5a-e5718f5a22f1%2F1-01.gif?v=1636607382504"
                   width="100%"
                 />
                 <div class="card-body">
                   <p class="card-text">
-                    This is Gif projects
+                    Gif projects
                   </p>
                   <div
                     class="d-flex justify-content-between align-items-center"
@@ -134,11 +134,11 @@
             <div class="col-md-4">
               <div class="card mb-4 shadow-sm">
                 <img
-                  src="https://cdn.glitch.com/58a399ff-c726-463e-80a0-b4a67910520d%2FJellyfish%20tentacle%20copy%204.jpg?v=1619397891313"
+                  src="https://cdn.glitch.me/0ec6ce21-231c-4146-8e5a-e5718f5a22f1%2Fglitch2.jpg?v=1636612422671"
                   width="100%"
                 />
                 <div class="card-body">
-                  <p class="card-text">This is Glitch project.</p>
+                  <p class="card-text">Glitch project.</p>
                   <div
                     class="d-flex justify-content-between align-items-center"
                   >
@@ -157,22 +157,22 @@
             </div>
             <!-- glitch Card End -->
 
-            <!-- whosdown Card Start -->
+            <!-- meme Card Start -->
             <div class="col-md-4">
               <div class="card mb-4 shadow-sm">
                 <img
-                  src="https://cdn.glitch.com/58a399ff-c726-463e-80a0-b4a67910520d%2FJasmin's-gif.gif?v=1619397939256"
+                  src="https://cdn.glitch.me/0ec6ce21-231c-4146-8e5a-e5718f5a22f1%2Fmeme6.jpg?v=1636612343615"
                   width="100%"
                 />
                 <div class="card-body">
-                  <p class="card-text">Projects - UI designs</p>
+                  <p class="card-text">MEME Projects</p>
                   <div
                     class="d-flex justify-content-between align-items-center"
                   >
                     <div class="btn-group">
                       <button
                         type="button"
-                        onclick="document.location.href = 'whosdown.html'"
+                        onclick="document.location.href = 'meme.html'"
                         class="btn btn-sm btn-outline-secondary"
                       >
                         View
@@ -182,23 +182,23 @@
                 </div>
               </div>
             </div>
-            <!-- whosdown Card End -->
-            <!-- drawing Start -->
+            <!-- meme Card End -->
+            <!-- Whosdown Start -->
             <div class="col-md-4">
               <div class="card mb-4 shadow-sm">
                 <img
-                  src="https://cdn.glitch.com/58a399ff-c726-463e-80a0-b4a67910520d%2FJasmin's-gif.gif?v=1619397939256"
+                  src="https://cdn.glitch.me/0ec6ce21-231c-4146-8e5a-e5718f5a22f1%2Flandsing.jpg?v=1636612523066"
                   width="100%"
                 />
                 <div class="card-body">
-                  <p class="card-text">This is personal drawings</p>
+                  <p class="card-text">Projects - Whos Down</p>
                   <div
                     class="d-flex justify-content-between align-items-center"
                   >
                     <div class="btn-group">
                       <button
                         type="button"
-                        onclick="document.location.href = 'drawing.html'"
+                        onclick="document.location.href = 'whosdown.html'"
                         class="btn btn-sm btn-outline-secondary"
                       >
                         View
