--- a/index.html
+++ b/index.html
@@ -50,6 +50,9 @@
         position: -webkit-sticky; /* Safari */
         position: sticky;
         top: 0;
+        font-family: "Calibre", sans-serif;
+        font-size: 12px;
+        font-weight: bold;
       }
 
       li {
@@ -65,7 +68,7 @@
       }
 
       li a:hover {
-        color: #f4f4f4;
+        color: #b071c6;
       }
 
       .active {
@@ -87,9 +90,10 @@
   
 
 <ul>
-  <li><a class="active" href="#home">Home</a></li>
-  <li><a href="#news">News</a></li>
-  <li><a href="#contact">Contact</a></li>
+ <li><a href="#contact" style="text-decoration: none";>CONTACT</a></li>
+  <li><a href="#about" style="text-decoration: none">ABOUT</a></li>
+  <li><a href="#works" style="text-decoration: none">WORKS</a></li>
+  <li><a class="active" href="#home" style="text-decoration: none">HOME</a></li>
 </ul>
     </div>
 
