🦁🌶 Checkpoint ./index.html:38505739/22

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
       }
 
       li a:hover {
-        color: #b071c6;
+        color: #b10096;
       }
 
       .active {
@@ -93,7 +93,7 @@
       />
 
       <ul>
-        <li><a href="#contact" style="text-decoration: none" ;>CONTACT</a></li>
+        <li><a href="#contact" style="text-decoration: none">CONTACT</a></li>
         <li><a href="#about" style="text-decoration: none">ABOUT</a></li>
         <li><a href="#works" style="text-decoration: none">WORKS</a></li>
         <li>
