--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         top: 0;
         font-family: "Calibre", sans-serif;
         font-size: 12px;
-        font-weight: bold;
+        font-weight: normal;
       }
 
       li {
@@ -72,7 +72,7 @@
       }
 
       .active {
-        color: #white;
+        color: #b10096;
       }
     </style>
 
