🐸🛬 Checkpoint ./index.html:38505739/447 ./style.css:38505739/152

--- a/index.html
+++ b/index.html
@@ -74,6 +74,10 @@
       .active {
         color: #b10096;
       }
+      @font-face {
+  font-family: "ubuntu";
+  src: url("assets/myfontname.ttf") format("truetype");
+}
     </style>
 
     <!-- Custom styles for this template -->
@@ -115,9 +119,10 @@
   <body>
     <div class="section">
       <div class="row">
-        <div class="column-md-10">
-          <h1>Hello, this is Soin An.</h1>
-          <p>I believe creative things can change how we live<br /><br /></p>
+        <div class="column-md-10" style="padding-right: 60px;">
+          <h1>I'm Soin An, a 
+            I enjoy creating user-centric, delightful, and human experiences. </h1>
+          
         </div>
         
         <div class="column-md-2">
