🌽🎁 Checkpoint ./index.html:38505739/727 ./style.css:38505739/227

--- a/index.html
+++ b/index.html
@@ -74,9 +74,20 @@
       .active {
         color: #b10096;
       }
-      @font-face {
-  font-family: "ubuntu";
-  src: url("assets/myfontname.ttf") format("truetype");
+      
+      <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Ubuntu&display=swap" rel="stylesheet">
+      h1 {
+  font-style: normal;
+  font-family:"ubuntu", sans-serif;
+  font-weight: 500;
+}
+
+p {
+  font-style: normal;
+  font-family: "helvetica", sans-serif;
+
 }
     </style>
 
