--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
       li a {
         display: block;
         color: black;
-        text-align: center;
+        text-align: left;
         padding: 14px 16px;
         text-decoration: none;
       }
@@ -83,6 +83,7 @@
         font-style: normal;
         font-family: "ubuntu", sans-serif;
         font-weight: 500;
+        text-align: left;
       }
 
       p {
@@ -140,12 +141,45 @@
             <img
               src="https://cdn.glitch.me/0ec6ce21-231c-4146-8e5a-e5718f5a22f1%2Fprofile.png?v=1637634918766"
               alt="profile"
-              width="30%"
+              width="70%"
             />
           </div>
         </div>
       </div>
     </main>
+
+    <div class="section">
+      <div class="row">
+        <div class="column">
+          <img
+            src="https://cdn.glitch.me/0ec6ce21-231c-4146-8e5a-e5718f5a22f1%2Fcard%20template.jpg?v=1637637464081"
+            alt="project card"
+          />
+        </div>
+        <div class="column">
+          <img
+            src="https://cdn.glitch.me/0ec6ce21-231c-4146-8e5a-e5718f5a22f1%2Fcard%20template.jpg?v=1637637464081"
+            alt="project card"
+          />
+        </div>
+      </div>
+      <div class="card">
+        <div class="row">
+          <div class="column">
+            <img
+              src="https://cdn.glitch.me/0ec6ce21-231c-4146-8e5a-e5718f5a22f1%2Fcard%20template.jpg?v=1637637464081"
+              alt="project card"
+            />
+          </div>
+          <div class="column">
+            <img
+              src="https://cdn.glitch.me/0ec6ce21-231c-4146-8e5a-e5718f5a22f1%2Fcard%20template.jpg?v=1637637464081"
+              alt="project card"
+            />
+          </div>
+        </div>
+      </div>
+    </div>
 
     <!--bootsratp-->
     <script
