--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <!-- This example is based off of the Bootstrap 4 Starter
     Template. It has been modified and additional examples have
     been added to demo a simple art portfolio. -->
-    <meta charset="utf-8" />
+   
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <meta name="description" content="" />
@@ -28,7 +28,17 @@
     />
 
     <!-- Additional Style Rules-->
-    <style>
+    
+
+    <!-- Custom styles for this template -->
+    <link href="style.css" rel="stylesheet" />
+
+    <meta charset="utf-8" />
+    <title>Soin An Portfolio</title>
+    <link rel="stylesheet" href="style.css" />
+    <script src="/script.js" defer></script>
+  </head>
+  <style>
       .bd-placeholder-img {
         font-size: 1.125rem;
         text-anchor: middle;
@@ -82,6 +92,7 @@
         font-family: "ubuntu", sans-serif;
         font-weight: 500;
         text-align: left;
+        
       }
 
       p {
@@ -96,20 +107,11 @@
 
     </style>
 
-    <!-- Custom styles for this template -->
-    <link href="style.css" rel="stylesheet" />
-
-    <meta charset="utf-8" />
-    <title>Soin An Portfolio</title>
-    <link rel="stylesheet" href="style.css" />
-    <script src="/script.js" defer></script>
-  </head>
-
   <header>
     <div class="header">
       <img
         src="https://cdn.glitch.me/0ec6ce21-231c-4146-8e5a-e5718f5a22f1%2Flogo1.png?v=1637638518383"
-        alt="logo"
+        alt="logo" style="100%"
       />
 
       <ul>
@@ -137,7 +139,7 @@
       <div class="section">
         <div class="row">
           <div class="column">
-            <h1>
+            <h1 style="font-size:3vw">
               I'm Soin An, a I enjoy creating user-centric, delightful, and
               human experiences.
             </h1>
@@ -146,7 +148,7 @@
             <img
               src="https://cdn.glitch.me/0ec6ce21-231c-4146-8e5a-e5718f5a22f1%2Fprofile.png?v=1637634918766"
               alt="profile"
-              width="70%"
+              width="100%"
             />
           </div>
         </div>
