--- a/index.html
+++ b/index.html
@@ -99,6 +99,7 @@
     @media screen and (max-width: 600px) {
       .column {
         width: 100%;
+        padding-bottom: 50px;
       }
     }
     
