👾🐦 Checkpoint ./index.html:38505739/163 ./bio.html:38505739/38 ./portfolio/works.html:38505739/48 ./portfolio/whosdown.html:38505739/81 ./portfolio/website.html:38505739/76 ./portfolio/glitch.html:38505739/77 ./portfolio/gif.html:38505739/71 ./portfolio/drawings.html:38505739/85

--- a/index.html
+++ b/index.html
@@ -133,7 +133,9 @@
       font-size: 16px; /* Increased text to enable scrolling */
       padding: 0px 10px;
     }
-
+ .active {
+      color: #006241;
+    }
     @media screen and (max-height: 450px) {
       .sidenav {
         padding-top: 15px;
@@ -168,6 +170,8 @@
           </li>
 
           <li><a href="/bio.html" style="text-decoration: none">ABOUT</a></li>
+          
+          <li><a href="/bio.html" style="text-decoration: none">RESUME</a></li>
 
           <li>
             <a href="mailto:soin.an@sjsu.edu" style="text-decoration: none"
