--- a/portfolio/whosdown.html
+++ b/portfolio/whosdown.html
@@ -133,6 +133,10 @@
       font-size: 16px; /* Increased text to enable scrolling */
       padding: 0px 10px;
     }
+    
+     .active {
+      color: #006241;
+    }
 
     @media screen and (max-height: 450px) {
       .sidenav {
@@ -162,7 +166,7 @@
             /></a>
           
           <li>
-            <a href="/portfolio/works.html" style="text-decoration: none"
+             <a  class="active" href="/portfolio/works.html" style="text-decoration: none"
               >WORKS</a
             >
           </li>
