--- a/portfolio/works.html
+++ b/portfolio/works.html
@@ -133,6 +133,10 @@
       font-size: 16px; /* Increased text to enable scrolling */
       padding: 0px 10px;
     }
+    
+     .active {
+      color: #006241;
+    }
 
     @media screen and (max-height: 450px) {
       .sidenav {
