--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       crossorigin="anonymous"
     />
     <link
-      href="https://fonts.googleapis.com/css2?family=Ubuntu&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Vidaloka&display=swap"
       rel="stylesheet"
     />
 
@@ -60,14 +60,14 @@
       background-color: #ffffff;
      
       top: 0;
-      font-family: "ubuntu", sans-serif;
+      font-family: "Vidaloka", serif;
       font-size: 8px;
       font-weight: normal;
     }
 
     li {
       float: left;
-      font-family: "ubuntu", sans-serif;
+      font-family: "Vidaloka", serif;
     }
 
     li a {
@@ -88,7 +88,7 @@
 
     h1 {
       font-style: normal;
-      font-family: "ubuntu", sans-serif;
+      font-family: "Vidaloka", serif;
       font-weight: 500;
       text-align: left;
       font-size: 18px;
@@ -128,7 +128,7 @@
 
     .sidenav a:hover {
       color: #818181;
-      font-family: "ubuntu", sans-serif;
+      font-family: "Vidaloka", serif;
     }
 
     .main {
@@ -161,7 +161,7 @@
           
             <a href="/index.html" style="text-decoration: none"
               ><img
-                src="https://cdn.glitch.me/0ec6ce21-231c-4146-8e5a-e5718f5a22f1%2Flogo1.png?v=1637638518383"
+                src="https://cdn.glitch.global/0ec6ce21-231c-4146-8e5a-e5718f5a22f1/namelogo.png?v=1648787732597"
                 alt="logo"
                 style="100%"
             /></a>
