--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
     <div class="row">
       <div class="column">
         <img
-          src="https://cdn.glitch.me/0ec6ce21-231c-4146-8e5a-e5718f5a22f1%2Fcard%20template.jpg?v=1637637464081"
+          src="https://cdn.glitch.global/0ec6ce21-231c-4146-8e5a-e5718f5a22f1/glitch_thumb.png?v=1649127890696"
           alt="project card"
         />
       </div>
