👟⛴ Checkpoint ./index.html:38505739/1036 ./portfolio/style.css:38505739/1818 ./portfolio/drawings.html:38505739/1775 ./portfolio/gif.html:38505739/11769 ./portfolio/glitch.html:38505739/11769 ./portfolio/website.html:38505739/11769 ./portfolio/whosdown.html:38505739/11769 ./portfolio/video.html:38505739/5871 ./portfolio/cow.html:38505739/5871 ./bio.html:38505739/429 ./portfolio/works.html:38505739/83

--- a/index.html
+++ b/index.html
@@ -223,33 +223,36 @@
           </div>
     <div class="row">
       <div class="column">
-       <a href="/index.html" style="text-decoration: none"
+       <a href="/portfolio/glitch.html" style="text-decoration: none"
               > <img
           src="https://cdn.glitch.global/0ec6ce21-231c-4146-8e5a-e5718f5a22f1/glitch_thumb.png?v=1649127890696"  width="100%"
           alt="glitch"
-        />
-         </div><
+                     /></a>
+         </div>
       <div class="column">
-        <img
+       <a href="/portfolio/video.html" style="text-decoration: none"
+              > <img
           src="https://cdn.glitch.global/0ec6ce21-231c-4146-8e5a-e5718f5a22f1/video_thumbs.png?v=1649127882070" width="100%"
           alt="video"
-        />
+                     /></a>
       </div>
     </div>
 <div class="section">
 
     <div class="row">
       <div class="column">
-        <img
+        <a href="/portfolio/gif.html" style="text-decoration: none"
+              ><img
           src="https://cdn.glitch.global/0ec6ce21-231c-4146-8e5a-e5718f5a22f1/gif_thumb.png?v=1649127888456" width="100%"
           alt="gif"
-        />
+                    /></a>
       </div>
       <div class="column">
-        <img
+       <a href="/portfolio/website.html" style="text-decoration: none"
+              > <img
           src="https://cdn.glitch.global/0ec6ce21-231c-4146-8e5a-e5718f5a22f1/website_thumb.png?v=1649127886501" width="100%"
           alt="website"
-        />
+                     /></a>
       </div>
     </div>
   </div>
@@ -257,16 +260,18 @@
 
       <div class="row">
       <div class="column">
-        <img
+       <a href="/portfolio/whosdown.html" style="text-decoration: none"
+              > <img
           src="https://cdn.glitch.global/0ec6ce21-231c-4146-8e5a-e5718f5a22f1/whos_thumb.png?v=1649127878350" width="100%"
           alt="whosdown"
-        />
+                     /></a>
       </div>
       <div class="column">
-        <img
+       <a href="/portfolio/cow.html" style="text-decoration: none"
+              > <img
           src="https://cdn.glitch.global/0ec6ce21-231c-4146-8e5a-e5718f5a22f1/cow_thumb.png?v=1649127880462" width="100%"
           alt="cow"
-        />
+                     /></a>
       </div>
     </div>
         </div>
@@ -274,10 +279,11 @@
 
          <div class="row">
       <div class="column">
-        <img
+       <a href="/portfolio/drawings.html" style="text-decoration: none"
+              > <img
           src="https://cdn.glitch.global/0ec6ce21-231c-4146-8e5a-e5718f5a22f1/drawing_thumb.png?v=1649127884229" width="100%"
           alt="drawing"
-        />
+                     /></a>
       </div>
      
     </div></div>
@@ -290,5 +296,11 @@
       integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
       crossorigin="anonymous"
     ></script>
-  </body>
+  </body> <footer>
+  <p>
+    © Copyright Soin An. All Rights Reserved
+
+
+    </p>
+  </footer>
 </html>
