🐞🚊 Checkpoint ./.glitch-assets:38505739/4441 ./index.html:38505739/1529 ./style.css:38505739/29 ./portfolio/works.html:38505739/3951 ./portfolio/gif.html:38505739/1091

--- a/index.html
+++ b/index.html
@@ -231,14 +231,14 @@
       <div class="column">
        <a href="/portfolio/glitch.html" style="text-decoration: none"
               > <img
-          src="https://cdn.glitch.global/0ec6ce21-231c-4146-8e5a-e5718f5a22f1/glitch_thumb.png?v=1649127890696"  width="100%"
+          src="https://cdn.glitch.global/0ec6ce21-231c-4146-8e5a-e5718f5a22f1/glitch_thumb.png?v=1649133370165"  width="100%"
           alt="glitch"
                      /></a>
          </div>
       <div class="column">
        <a href="/portfolio/video.html" style="text-decoration: none"
               > <img
-          src="https://cdn.glitch.global/0ec6ce21-231c-4146-8e5a-e5718f5a22f1/video_thumbs.png?v=1649127882070" width="100%"
+          src="https://cdn.glitch.global/0ec6ce21-231c-4146-8e5a-e5718f5a22f1/video_thumb.png?v=1649133368437" width="100%"
           alt="video"
                      /></a>
       </div>              
@@ -250,14 +250,14 @@
       <div class="column">
         <a href="/portfolio/gif.html" style="text-decoration: none"
               ><img
-          src="https://cdn.glitch.global/0ec6ce21-231c-4146-8e5a-e5718f5a22f1/gif_thumb.png?v=1649127888456" width="100%"
+          src="https://cdn.glitch.global/0ec6ce21-231c-4146-8e5a-e5718f5a22f1/gif_thumb%20copy.png?v=1649133364061" width="100%"
           alt="gif"
                     /></a>
       </div>
       <div class="column">
        <a href="/portfolio/website.html" style="text-decoration: none"
               > <img
-          src="https://cdn.glitch.global/0ec6ce21-231c-4146-8e5a-e5718f5a22f1/website_thumb.png?v=1649127886501" width="100%"
+          src="https://cdn.glitch.global/0ec6ce21-231c-4146-8e5a-e5718f5a22f1/website_thumb.png?v=1649133678514" width="100%"
           alt="website"
                      /></a>
       </div>
@@ -277,7 +277,7 @@
       <div class="column">
        <a href="/portfolio/cow.html" style="text-decoration: none"
               > <img
-          src="https://cdn.glitch.global/0ec6ce21-231c-4146-8e5a-e5718f5a22f1/cow_thumb.png?v=1649127880462" width="100%"
+          src="https://cdn.glitch.global/0ec6ce21-231c-4146-8e5a-e5718f5a22f1/cow_thumb%20copy.png?v=1649133360299" width="100%"
           alt="cow"
                      /></a>
       </div>
@@ -289,7 +289,7 @@
       <div class="column">
        <a href="/portfolio/drawings.html" style="text-decoration: none"
               > <img
-          src="https://cdn.glitch.global/0ec6ce21-231c-4146-8e5a-e5718f5a22f1/drawing_thumb.png?v=1649127884229" width="100%"
+          src="https://cdn.glitch.global/0ec6ce21-231c-4146-8e5a-e5718f5a22f1/drawing_thumb.png?v=1649133676783" width="100%"
           alt="drawing"
                      /></a>
       </div>
