💇💍 Checkpoint ./.glitch-assets:38505739/3003 ./portfolio/website.html:38505739/2391 ./portfolio/style.css:38505739/9

--- a/portfolio/website.html
+++ b/portfolio/website.html
@@ -197,14 +197,28 @@
     <main role="main" class="container">
       <div class="section">
         <div class="row">
+         <a href="/index.html" style="text-decoration: none"
+              > <img
+            src="https://cdn.glitch.global/0ec6ce21-231c-4146-8e5a-e5718f5a22f1/click.png?v=1649137079861"
+            width="100%"
+                     /></a>
+        </div>
+        
+        <div class="row">
           <img
-            src="https://cdn.glitch.global/0ec6ce21-231c-4146-8e5a-e5718f5a22f1/campfire.gif?v=1649135186579"
+            src="https://cdn.glitch.global/0ec6ce21-231c-4146-8e5a-e5718f5a22f1/new7.jpg?v=1649137082737"
             width="100%"
           />
         </div>
         <div class="row">
           <img
-            src="https://cdn.glitch.global/0ec6ce21-231c-4146-8e5a-e5718f5a22f1/lotusfinal.gif?v=1649135192809"
+            src="https://cdn.glitch.global/0ec6ce21-231c-4146-8e5a-e5718f5a22f1/menu1.jpg?v=1649137112251"
+            width="100%"
+          />
+        </div>
+        <div class="row">
+          <img
+            src="https://cdn.glitch.global/0ec6ce21-231c-4146-8e5a-e5718f5a22f1/order1.png?v=1649137102636"
             width="100%"
           />
         </div>
