--- a/portfolio/drawings.html
+++ b/portfolio/drawings.html
@@ -104,10 +104,7 @@
         padding-bottom: 50px;
       }
     }
-    img {
-      padding-top: 50px;
-      width: 1000px;
-    }
+
     .sidenav {
       height: 100%;
       width: 160px;
@@ -198,15 +195,32 @@
       <div class="section">
         <div class="row">
           <img
-            src="https://cdn.glitch.global/0ec6ce21-231c-4146-8e5a-e5718f5a22f1/campfire.gif?v=1649135186579"
+            src="https://cdn.glitch.global/0ec6ce21-231c-4146-8e5a-e5718f5a22f1/p5js.png?v=1649137830541"
             width="100%"
           />
         </div>
-        <div class="row">
-          <img
-            src="https://cdn.glitch.global/0ec6ce21-231c-4146-8e5a-e5718f5a22f1/lotusfinal.gif?v=1649135192809"
-            width="100%"
-          />
+
+        <div class="section">
+          <div class="row">
+            <div class="column">
+              <iframe
+                width="560"
+                height="315"
+                src="https://www.youtube.com/embed/2SkBRdwZhRk"
+                title="YouTube video player"
+                frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                allowfullscreen
+              ></iframe>
+            </div>
+            <div class="column">
+              <img
+                src="https://cdn.glitch.global/0ec6ce21-231c-4146-8e5a-e5718f5a22f1/website_thumb.png?v=1649133678514"
+                width="100%"
+                alt="website"
+              />
+            </div>
+          </div>
         </div>
       </div>
     </main>
