🌿🎳 Checkpoint ./portfolio/drawings.html:38505739/33041 ./.glitch-assets:38505739/2273

--- a/portfolio/drawings.html
+++ b/portfolio/drawings.html
@@ -195,16 +195,72 @@
       <div class="section">
         <div class="row">
           <img
-            src="https://cdn.glitch.global/0ec6ce21-231c-4146-8e5a-e5718f5a22f1/p5js.png?v=1649137830541"
+            src="https://cdn.glitch.global/0ec6ce21-231c-4146-8e5a-e5718f5a22f1/drawing.png?v=1649137828642"
             width="100%"
+            alt="line"
           />
         </div>
 
         <div class="section">
           <div class="row">
             <div class="column">
+              <img
+                src="https://cdn.glitch.global/0ec6ce21-231c-4146-8e5a-e5718f5a22f1/042921.jpg?v=1649138456084"
+                width="100%"
+              />
+            </div>
+            <div class="column">
+              <img
+                src="https://cdn.glitch.global/0ec6ce21-231c-4146-8e5a-e5718f5a22f1/rainingcats2.jpg?v=1649138798880"
+                width="93%"
+              />
+            </div>
+          </div>
+        </div>
+        <div class="section">
+          <div class="row">
+            <div class="column">
+              <img
+                src="https://cdn.glitch.global/0ec6ce21-231c-4146-8e5a-e5718f5a22f1/042921.jpg?v=1649138456084"
+                width="100%"
+              />
+            </div>
+            <div class="column">
+              <img
+                src="https://cdn.glitch.global/0ec6ce21-231c-4146-8e5a-e5718f5a22f1/rainingcats2.jpg?v=1649138798880"
+                width="93%"
+              />
+            </div>
+          </div>
+        </div>
+        <div class="section">
+          <div class="row">
+            <div class="column">
+              <img
+                src="https://cdn.glitch.global/0ec6ce21-231c-4146-8e5a-e5718f5a22f1/042921.jpg?v=1649138456084"
+                width="100%"
+              />
+            </div>
+            <div class="column">
+              <img
+                src="https://cdn.glitch.global/0ec6ce21-231c-4146-8e5a-e5718f5a22f1/rainingcats2.jpg?v=1649138798880"
+                width="93%"
+              />
+            </div>
+          </div>
+        </div>
+
+        <div class="row">
+          <img
+            src="https://cdn.glitch.global/0ec6ce21-231c-4146-8e5a-e5718f5a22f1/p5js.png?v=1649137830541"
+            width="100%"
+          />
+        </div>
+        <div class="section">
+          <div class="row">
+            <div class="column">
               <iframe
-                width="560"
+                width="300"
                 height="315"
                 src="https://www.youtube.com/embed/2SkBRdwZhRk"
                 title="YouTube video player"
@@ -215,9 +271,8 @@
             </div>
             <div class="column">
               <img
-                src="https://cdn.glitch.global/0ec6ce21-231c-4146-8e5a-e5718f5a22f1/website_thumb.png?v=1649133678514"
+                src="https://cdn.glitch.global/0ec6ce21-231c-4146-8e5a-e5718f5a22f1/code.jpg?v=1649138045072"
                 width="100%"
-                alt="website"
               />
             </div>
           </div>
