💎🌥 Checkpoint ./portfolio/drawings.html:38505739/2166 ./.glitch-assets:38505739/1115

--- a/portfolio/drawings.html
+++ b/portfolio/drawings.html
@@ -221,14 +221,14 @@
           <div class="row">
             <div class="column">
               <img
-                src="https://cdn.glitch.global/0ec6ce21-231c-4146-8e5a-e5718f5a22f1/042921.jpg?v=1649138456084"
+                src="https://cdn.glitch.global/0ec6ce21-231c-4146-8e5a-e5718f5a22f1/eb.jpg?v=1649138474512"
                 width="100%"
               />
             </div>
             <div class="column">
               <img
-                src="https://cdn.glitch.global/0ec6ce21-231c-4146-8e5a-e5718f5a22f1/rainingcats2.jpg?v=1649138798880"
-                width="93%"
+                src="https://cdn.glitch.global/0ec6ce21-231c-4146-8e5a-e5718f5a22f1/sh1.jpg?v=1649139589842"
+                width="100%"
               />
             </div>
           </div>
@@ -237,14 +237,14 @@
           <div class="row">
             <div class="column">
               <img
-                src="https://cdn.glitch.global/0ec6ce21-231c-4146-8e5a-e5718f5a22f1/042921.jpg?v=1649138456084"
+                src="https://cdn.glitch.global/0ec6ce21-231c-4146-8e5a-e5718f5a22f1/yc2.jpg?v=1649139342063"
                 width="100%"
               />
             </div>
             <div class="column">
               <img
-                src="https://cdn.glitch.global/0ec6ce21-231c-4146-8e5a-e5718f5a22f1/rainingcats2.jpg?v=1649138798880"
-                width="93%"
+                src="https://cdn.glitch.global/0ec6ce21-231c-4146-8e5a-e5718f5a22f1/wed_g.jpg?v=1649139489717"
+                width="90%"
               />
             </div>
           </div>
@@ -254,6 +254,7 @@
           <img
             src="https://cdn.glitch.global/0ec6ce21-231c-4146-8e5a-e5718f5a22f1/p5js.png?v=1649137830541"
             width="100%"
+               alt="line"
           />
         </div>
         <div class="section">
