--- a/portfolio/whosdown.html
+++ b/portfolio/whosdown.html
@@ -198,16 +198,16 @@
       <div class="section">
         <div class="row">
           <img
-            src="https://cdn.glitch.global/0ec6ce21-231c-4146-8e5a-e5718f5a22f1/campfire.gif?v=1649135186579"
+            src="https://cdn.glitch.global/0ec6ce21-231c-4146-8e5a-e5718f5a22f1/wdpage.jpg?v=1649140207265"
             width="100%"
           />
         </div>
-        <div class="row">
-          <img
-            src="https://cdn.glitch.global/0ec6ce21-231c-4146-8e5a-e5718f5a22f1/lotusfinal.gif?v=1649135192809"
-            width="100%"
-          />
-        </div>
+        <a href="/portfolio/gif.html" style="text-decoration: none"
+              ><img
+          src="https://cdn.glitch.global/0ec6ce21-231c-4146-8e5a-e5718f5a22f1/gif_thumb%20copy.png?v=1649133364061" width="100%"
+          alt="gif"
+                    /></a>
+        
       </div>
     </main>
 
