--- a/portfolio/whosdown.html
+++ b/portfolio/whosdown.html
@@ -201,14 +201,19 @@
             src="https://cdn.glitch.global/0ec6ce21-231c-4146-8e5a-e5718f5a22f1/wdpage.jpg?v=1649140207265"
             width="100%"
           />
-        </div>
-        <a href="/portfolio/gif.html" style="text-decoration: none"
+        </div></div>
+        <div class="section">
+        <div class="row">
+          <p>
+            Link below to access Who's Down App in App store.
+          </p>
+        <a href="https://apps.apple.com/us/app/whosdown/id1458204817" style="text-decoration: none"
               ><img
-          src="https://cdn.glitch.global/0ec6ce21-231c-4146-8e5a-e5718f5a22f1/gif_thumb%20copy.png?v=1649133364061" width="100%"
-          alt="gif"
+          src="https://cdn.glitch.global/0ec6ce21-231c-4146-8e5a-e5718f5a22f1/WhosDownIcon-withString-yellow.png?v=1649140320926" width="30%"
+          alt="whosdown"
                     /></a>
         
-      </div>
+      </div> </div>
     </main>
 
     <!--bootsratp-->
