🏫🚣 Checkpoint ./.glitch-assets:38505739/1131 ./portfolio/cow.html:38505739/11347 ./index.html:38505739/16281 ./portfolio/works.html:38505739/192 ./bio.html:38505739/381 ./style.css:38505739/95

--- a/portfolio/cow.html
+++ b/portfolio/cow.html
@@ -152,6 +152,9 @@
         margin-left: 160px;
         padding-left: 160px;
       }
+       .img {
+        width: 500px;
+      }
     }
   </style>
 
@@ -198,17 +201,11 @@
       <div class="section">
         <div class="row">
           <img
-            src="https://cdn.glitch.global/0ec6ce21-231c-4146-8e5a-e5718f5a22f1/campfire.gif?v=1649135186579"
+            src="https://cdn.glitch.global/0ec6ce21-231c-4146-8e5a-e5718f5a22f1/cow1.jpg?v=1649147902123"
             width="100%"
           />
-        </div>
-        <div class="row">
-          <img
-            src="https://cdn.glitch.global/0ec6ce21-231c-4146-8e5a-e5718f5a22f1/lotusfinal.gif?v=1649135192809"
-            width="100%"
-          />
-        </div>
-      </div>
+        </div></div>
+       
     </main>
 
     <!--bootsratp-->
