--- a/portfolio/works.html
+++ b/portfolio/works.html
@@ -255,7 +255,7 @@
       <div class="column">
        <a href="/portfolio/cow.html" style="text-decoration: none"
               > <img
-          src="https://cdn.glitch.global/0ec6ce21-231c-4146-8e5a-e5718f5a22f1/cow_thumb%20copy.png?v=1649133360299" width="100%"
+          src="https://cdn.glitch.global/0ec6ce21-231c-4146-8e5a-e5718f5a22f1/cow_thumb2.png?v=1649148122370" width="100%"
           alt="cow"
                      /></a>
       </div>
