🐵😅 Checkpoint ./.glitch-assets:38505739/2302 ./portfolio/cow.html:38505739/772 ./portfolio/gif.html:38505739/608 ./portfolio/glitch.html:38505739/388 ./portfolio/video.html:38505739/390 ./portfolio/website.html:38505739/389 ./portfolio/whosdown.html:38505739/386 ./portfolio/style.css:38505739/125

--- a/portfolio/cow.html
+++ b/portfolio/cow.html
@@ -153,7 +153,7 @@
         padding-left: 160px;
       }
        .img {
-        width: 500px;
+        width: 24%
       }
     }
   </style>
@@ -198,13 +198,18 @@
   <!----body---->
   <body>
     <main role="main" class="container">
-      <div class="section">
-        <div class="row">
+      <div class="section"><div class="row">
+          <div class="column2">
+           <img
+              src="https://cdn.glitch.global/0ec6ce21-231c-4146-8e5a-e5718f5a22f1/cowline.png?v=1649148791275"
+              alt="portfolio line"
+              width="100%"
+                 /> 
           <img
             src="https://cdn.glitch.global/0ec6ce21-231c-4146-8e5a-e5718f5a22f1/cow1.jpg?v=1649147902123"
             width="100%"
           />
-        </div></div>
+        </div></div></div>
        
     </main>
 
