--- a/portfolio/video.html
+++ b/portfolio/video.html
@@ -199,6 +199,11 @@
   <body>
     <main role="main" class="container">
       <div class="section">
+           <img
+              src="https://cdn.glitch.global/0ec6ce21-231c-4146-8e5a-e5718f5a22f1/video%20line.png?v=1649148801188"
+              alt="portfolio line"
+              width="100%"
+                 />
         <div class="row">
           <iframe width="1000" height="800" src="https://www.youtube.com/embed/KxHbl9se-Z4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </div>
