--- a/portfolio/whosdown.html
+++ b/portfolio/whosdown.html
@@ -196,6 +196,11 @@
   <body>
     <main role="main" class="container">
       <div class="section">
+           <img
+              src="https://cdn.glitch.global/0ec6ce21-231c-4146-8e5a-e5718f5a22f1/whosline.png?v=1649148795263"
+              alt="portfolio line"
+              width="100%"
+                 />
         <div class="row">
           <img
             src="https://cdn.glitch.global/0ec6ce21-231c-4146-8e5a-e5718f5a22f1/wdpage.jpg?v=1649140207265"
