--- a/portfolio/gif.html
+++ b/portfolio/gif.html
@@ -196,6 +196,11 @@
   <body>
     <main role="main" class="container">
       <div class="section">
+           <img
+              src="https://cdn.glitch.global/0ec6ce21-231c-4146-8e5a-e5718f5a22f1/giflines.png?v=1649148797974"
+              alt="portfolio line"
+              width="100%"
+                 />
         <div class="row">
           <img
             src="https://cdn.glitch.global/0ec6ce21-231c-4146-8e5a-e5718f5a22f1/campfire.gif?v=1649135186579"
