--- a/portfolio/website.html
+++ b/portfolio/website.html
@@ -196,6 +196,11 @@
   <body>
     <main role="main" class="container">
       <div class="section">
+           <img
+              src="https://cdn.glitch.global/0ec6ce21-231c-4146-8e5a-e5718f5a22f1/websiteline.png?v=1649148793084"
+              alt="portfolio line"
+              width="100%"
+                 />
         <div class="row">
          <a href="/index.html" style="text-decoration: none"
               > <img
