--- a/portfolio/cow.html
+++ b/portfolio/cow.html
@@ -99,7 +99,7 @@
     }
 
     @media screen and (max-width: 600px) {
-      .column {
+      .column2 {
         width: 100%;
         padding-bottom: 50px;
       }
@@ -153,7 +153,7 @@
         padding-left: 160px;
       }
        .img {
-        width: 24%
+        width: 25%
       }
     }
   </style>
