--- a/index.html
+++ b/index.html
@@ -161,13 +161,13 @@
         <ul>
           <a href="/index.html" style="text-decoration: none"
             ><img
-              src="https://cdn.glitch.global/0ec6ce21-231c-4146-8e5a-e5718f5a22f1/namelogo.png?v=1648787732597"
+              src="./resource/namelogo.png"
               alt="logo"
               style="100%"
           /></a>
 
           <li>
-            <a href="/portfolio/works.html" style="text-decoration: none"
+            <a href="./portfolio/works.html" style="text-decoration: none"
               ><h1>WORKS</h1></a
             >
           </li>
@@ -200,31 +200,31 @@
       <div class="section">
         <div class="row">
           <img
-            src="https://cdn.glitch.global/0ec6ce21-231c-4146-8e5a-e5718f5a22f1/landing%20img.gif?v=1648799420395"
+            src="./resource/landing%20img.gif"
             width="100%"
           />
         </div>
 
         <div class="section">
           <img
-            src="https://cdn.glitch.global/0ec6ce21-231c-4146-8e5a-e5718f5a22f1/port2.png?v=1649131115060"
+            src="./resource/port2.png"
             alt="portfolio line"
             width="100%"
           />
 
           <div class="row">
             <div class="column">
-              <a href="/portfolio/glitch.html" style="text-decoration: none">
+              <a href="./portfolio/glitch.html" style="text-decoration: none">
                 <img
-                  src="https://cdn.glitch.global/0ec6ce21-231c-4146-8e5a-e5718f5a22f1/glitch_thumb.png?v=1649133370165"
+                  src="./resource/glitch_thumb.png"
                   width="100%"
                   alt="glitch"
               /></a>
             </div>
             <div class="column">
-              <a href="/portfolio/video.html" style="text-decoration: none">
+              <a href="./portfolio/video.html" style="text-decoration: none">
                 <img
-                  src="https://cdn.glitch.global/0ec6ce21-231c-4146-8e5a-e5718f5a22f1/video_thumb.png?v=1649133368437"
+                  src="./resource/video_thumb.png"
                   width="100%"
                   alt="video"
               /></a>
@@ -234,17 +234,17 @@
         <div class="section">
           <div class="row">
             <div class="column">
-              <a href="/portfolio/gif.html" style="text-decoration: none"
+              <a href="./portfolio/gif.html" style="text-decoration: none"
                 ><img
-                  src="https://cdn.glitch.global/0ec6ce21-231c-4146-8e5a-e5718f5a22f1/gif_thumb%20copy.png?v=1649133364061"
+                  src="./resource/gif_thumb%20copy.png"
                   width="100%"
                   alt="gif"
               /></a>
             </div>
             <div class="column">
-              <a href="/portfolio/website.html" style="text-decoration: none">
+              <a href="./portfolio/website.html" style="text-decoration: none">
                 <img
-                  src="https://cdn.glitch.global/0ec6ce21-231c-4146-8e5a-e5718f5a22f1/website_thumb.png?v=1649133678514"
+                  src="./resource/website_thumb.png"
                   width="100%"
                   alt="website"
               /></a>
@@ -254,17 +254,17 @@
         <div class="section">
           <div class="row">
             <div class="column">
-              <a href="/portfolio/whosdown.html" style="text-decoration: none">
+              <a href="./portfolio/whosdown.html" style="text-decoration: none">
                 <img
-                  src="https://cdn.glitch.global/0ec6ce21-231c-4146-8e5a-e5718f5a22f1/whosdown.png?v=1649131150923"
+                  src="./resource/whosdown.png"
                   width="100%"
                   alt="whosdown"
               /></a>
             </div>
             <div class="column">
-              <a href="/portfolio/cow.html" style="text-decoration: none">
+              <a href="./portfolio/cow.html" style="text-decoration: none">
                 <img
-                  src="https://cdn.glitch.global/0ec6ce21-231c-4146-8e5a-e5718f5a22f1/cow_thumb2.png?v=1649148122370"
+                  src="./resource/cow_thumb2.png"
                   width="100%"
                   alt="cow"
               /></a>
@@ -274,9 +274,9 @@
         <div class="section">
           <div class="row">
             <div class="column">
-              <a href="/portfolio/drawings.html" style="text-decoration: none">
+              <a href="./portfolio/drawings.html" style="text-decoration: none">
                 <img
-                  src="https://cdn.glitch.global/0ec6ce21-231c-4146-8e5a-e5718f5a22f1/drawing_thumb.png?v=1649133676783"
+                  src="./resource/drawing_thumb.png"
                   width="100%"
                   alt="drawing"
               /></a>
