--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
           </li>
 
           <li>
-            <a href="/bio.html" style="text-decoration: none"><h1>ABOUT</h1></a>
+            <a href="./portfolio/bio.html" style="text-decoration: none"><h1>ABOUT</h1></a>
           </li>
 
           <li>
