--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
     <div class="header">
       <div class="sidenav">
         <ul>
-          <a href="/index.html" style="text-decoration: none"
+          <a href="./index.html" style="text-decoration: none"
             ><img
               src="./resource/namelogo.png"
               alt="logo"
