--- a/portfolio/video.html
+++ b/portfolio/video.html
@@ -215,7 +215,7 @@
         </div>
         
         <p>
-          First Video is a self portrait video. I filmed eye, mouth and hair and mixed for audience to imagine the portrait. <br/>
+          First Video is a self portrait video that I personally worked on. I filmed my eyes, mouth and hair and mixed in irregular order to imagine. <br/>
           For the second and third video is Synchronous and Asynchronous video projects for Art 75. I used same audio file to create two contrast video. <br/>
           
         </p>
