--- a/portfolio/cow.html
+++ b/portfolio/cow.html
@@ -162,25 +162,25 @@
     <div class="header">
       <div class="sidenav">
         <ul>
-          <a href="/index.html" style="text-decoration: none"
+          <a href="./index.html" style="text-decoration: none"
             ><img
-              src="https://cdn.glitch.global/0ec6ce21-231c-4146-8e5a-e5718f5a22f1/namelogo.png?v=1648787732597"
+              src="./resource/namelogo.png"
               alt="logo"
               style="100%"
           /></a>
 
           <li>
-            <a href="/portfolio/works.html" style="text-decoration: none"
+            <a href="./portfolio/works.html" style="text-decoration: none"
               ><h1>WORKS</h1></a
             >
           </li>
 
           <li>
-            <a href="/bio.html" style="text-decoration: none"><h1>ABOUT</h1></a>
+            <a href="./bio.html" style="text-decoration: none"><h1>ABOUT</h1></a>
           </li>
 
           <li>
-            <a href="/bio.html" style="text-decoration: none"
+            <a href="https://drive.google.com/file/d/1yKP6Wr5qEm62AT5oiXWWEtA9xNwFP_9L/view?usp=sharing" style="text-decoration: none"
               ><h1>RESUME</h1></a
             >
           </li>
@@ -201,12 +201,12 @@
       <div class="section"><div class="row">
           <div class="column2">
            <img
-              src="https://cdn.glitch.global/0ec6ce21-231c-4146-8e5a-e5718f5a22f1/cowline.png?v=1649148791275"
+              src="./resource/cowline.png"
               alt="portfolio line"
               width="100%"
                  /> 
           <img
-            src="https://cdn.glitch.global/0ec6ce21-231c-4146-8e5a-e5718f5a22f1/cow1.jpg?v=1649147902123"
+            src="./resource/cow1.jpg"
             width="100%"
           />
         </div></div></div>
