--- a/portfolio/drawings.html
+++ b/portfolio/drawings.html
@@ -156,25 +156,25 @@
     <div class="header">
       <div class="sidenav">
         <ul>
-          <a href="/index.html" style="text-decoration: none"
+          <a href="./index.html" style="text-decoration: none"
             ><img
-              src="https://cdn.glitch.global/0ec6ce21-231c-4146-8e5a-e5718f5a22f1/namelogo.png?v=1648787732597"
+              src="./resource/namelogo.png"
               alt="logo"
               style="100%"
           /></a>
 
           <li>
-            <a href="/portfolio/works.html" style="text-decoration: none"
+            <a href="./portfolio/works.html" style="text-decoration: none"
               ><h1>WORKS</h1></a
             >
           </li>
 
           <li>
-            <a href="/bio.html" style="text-decoration: none"><h1>ABOUT</h1></a>
+            <a href="./bio.html" style="text-decoration: none"><h1>ABOUT</h1></a>
           </li>
 
           <li>
-            <a href="/bio.html" style="text-decoration: none"
+            <a href="https://drive.google.com/file/d/1yKP6Wr5qEm62AT5oiXWWEtA9xNwFP_9L/view?usp=sharing" style="text-decoration: none"
               ><h1>RESUME</h1></a
             >
           </li>
@@ -195,7 +195,7 @@
       <div class="section">
         <div class="row">
           <img
-            src="https://cdn.glitch.global/0ec6ce21-231c-4146-8e5a-e5718f5a22f1/drawing.png?v=1649137828642"
+            src="./resource/drawing.png"
             width="100%"
             alt="line"
           />
@@ -205,13 +205,13 @@
           <div class="row">
             <div class="column">
               <img
-                src="https://cdn.glitch.global/0ec6ce21-231c-4146-8e5a-e5718f5a22f1/042921.jpg?v=1649138456084"
+                src="./resource/hanoak.jpg"
                 width="100%"
               />
             </div>
             <div class="column">
               <img
-                src="https://cdn.glitch.global/0ec6ce21-231c-4146-8e5a-e5718f5a22f1/rainingcats2.jpg?v=1649138798880"
+                src="./resource/rainingcats2.jpg"
                 width="93%"
               />
             </div>
@@ -221,13 +221,13 @@
           <div class="row">
             <div class="column">
               <img
-                src="https://cdn.glitch.global/0ec6ce21-231c-4146-8e5a-e5718f5a22f1/eb.jpg?v=1649138474512"
+                src="./resource/eb.jpg"
                 width="100%"
               />
             </div>
             <div class="column">
               <img
-                src="https://cdn.glitch.global/0ec6ce21-231c-4146-8e5a-e5718f5a22f1/sh1.jpg?v=1649139589842"
+                src="./resource/sh1.jpg"
                 width="100%"
               />
             </div>
@@ -237,13 +237,13 @@
           <div class="row">
             <div class="column">
               <img
-                src="https://cdn.glitch.global/0ec6ce21-231c-4146-8e5a-e5718f5a22f1/yc2.jpg?v=1649139342063"
+                src="./resource/yc2.jpg"
                 width="100%"
               />
             </div>
             <div class="column">
               <img
-                src="https://cdn.glitch.global/0ec6ce21-231c-4146-8e5a-e5718f5a22f1/wed_g.jpg?v=1649139489717"
+                src="./resource/wed_g.jpg"
                 width="90%"
               />
             </div>
@@ -252,7 +252,7 @@
 
         <div class="row">
           <img
-            src="https://cdn.glitch.global/0ec6ce21-231c-4146-8e5a-e5718f5a22f1/p5js.png?v=1649137830541"
+            src="./resource/p5js.png"
             width="100%"
                alt="line"
           />
@@ -272,7 +272,7 @@
             </div>
             <div class="column">
               <img
-                src="https://cdn.glitch.global/0ec6ce21-231c-4146-8e5a-e5718f5a22f1/code.jpg?v=1649138045072"
+                src="./resource/code.jpg"
                 width="100%"
               />
             </div>
