--- a/portfolio/gif.html
+++ b/portfolio/gif.html
@@ -159,25 +159,25 @@
     <div class="header">
       <div class="sidenav">
         <ul>
-          <a href="/index.html" style="text-decoration: none"
+          <a href="./index.html" style="text-decoration: none"
             ><img
-              src="https://cdn.glitch.global/0ec6ce21-231c-4146-8e5a-e5718f5a22f1/namelogo.png?v=1648787732597"
+              src="./resource/namelogo.png"
               alt="logo"
               style="100%"
           /></a>
 
           <li>
-            <a href="/portfolio/works.html" style="text-decoration: none"
+            <a href="./portfolio/works.html" style="text-decoration: none"
               ><h1>WORKS</h1></a
             >
           </li>
 
           <li>
-            <a href="/bio.html" style="text-decoration: none"><h1>ABOUT</h1></a>
+            <a href="./bio.html" style="text-decoration: none"><h1>ABOUT</h1></a>
           </li>
 
           <li>
-            <a href="/bio.html" style="text-decoration: none"
+            <a href="https://drive.google.com/file/d/1yKP6Wr5qEm62AT5oiXWWEtA9xNwFP_9L/view?usp=sharing" style="text-decoration: none"
               ><h1>RESUME</h1></a
             >
           </li>
@@ -197,19 +197,19 @@
     <main role="main" class="container">
       <div class="section">
            <img
-              src="https://cdn.glitch.global/0ec6ce21-231c-4146-8e5a-e5718f5a22f1/giflines.png?v=1649148797974"
+              src="./resource/giflines.png"
               alt="portfolio line"
               width="100%"
                  />
         <div class="row">
           <img
-            src="https://cdn.glitch.global/0ec6ce21-231c-4146-8e5a-e5718f5a22f1/campfire.gif?v=1649135186579"
+            src="./resource/campfire.gif"
             width="100%"
           />
         </div>
         <div class="row">
           <img
-            src="https://cdn.glitch.global/0ec6ce21-231c-4146-8e5a-e5718f5a22f1/lotusfinal.gif?v=1649135192809"
+            src="./resource/lotusfinal.gif"
             width="100%"
           />
         </div>
