--- a/portfolio/glitch.html
+++ b/portfolio/glitch.html
@@ -159,25 +159,25 @@
     <div class="header">
       <div class="sidenav">
         <ul>
-          <a href="/index.html" style="text-decoration: none"
+          <a href="./index.html" style="text-decoration: none"
             ><img
-              src="https://cdn.glitch.global/0ec6ce21-231c-4146-8e5a-e5718f5a22f1/namelogo.png?v=1648787732597"
+              src="./resource/namelogo.png"
               alt="logo"
               style="100%"
           /></a>
 
           <li>
-            <a href="/portfolio/works.html" style="text-decoration: none"
+            <a href="./portfolio/works.html" style="text-decoration: none"
               ><h1>WORKS</h1></a
             >
           </li>
 
           <li>
-            <a href="/bio.html" style="text-decoration: none"><h1>ABOUT</h1></a>
+            <a href="./bio.html" style="text-decoration: none"><h1>ABOUT</h1></a>
           </li>
 
           <li>
-            <a href="/bio.html" style="text-decoration: none"
+            <a href="https://drive.google.com/file/d/1yKP6Wr5qEm62AT5oiXWWEtA9xNwFP_9L/view?usp=sharing" style="text-decoration: none"
               ><h1>RESUME</h1></a
             >
           </li>
@@ -197,7 +197,7 @@
     <main role="main" class="container">
       <div class="section">
            <img
-              src="https://cdn.glitch.global/0ec6ce21-231c-4146-8e5a-e5718f5a22f1/glitchline.png?v=1649148814276"
+              src="./resource/glitchline.png"
               alt="portfolio line"
               width="100%"
                  />
@@ -214,25 +214,25 @@
         </div>
         <div class="row">
           <img
-            src="https://cdn.glitch.global/0ec6ce21-231c-4146-8e5a-e5718f5a22f1/barcelona.png?v=1649133908301"
+            src="./resource/barcelona.png"
             width="100%"
           />
         </div>
         <div class="row">
           <img
-            src="https://cdn.glitch.global/0ec6ce21-231c-4146-8e5a-e5718f5a22f1/mon.png?v=1649133906550"
+            src="./resource/mon.png"
             width="100%"
           />
         </div>
         <div class="row">
           <img
-            src="https://cdn.glitch.me/0ec6ce21-231c-4146-8e5a-e5718f5a22f1%2Fglitch2.jpg?v=1636612422671"
+            src="./resource/glitch2.jpg"
             width="100%"
           />
         </div>
         <div class="row">
           <img
-            src="https://cdn.glitch.me/0ec6ce21-231c-4146-8e5a-e5718f5a22f1%2Fglitch1.jpg?v=1636614509076"
+            src="./resource/glitch1.jpg"
             width="100%"
           />
         </div>
