--- a/portfolio/video.html
+++ b/portfolio/video.html
@@ -164,7 +164,7 @@
         <ul>
           <a href="./index.html" style="text-decoration: none"
             ><img
-              src="resource/namelogo.png"
+              src="./resource/namelogo.png"
               alt="logo"
               style="100%"
           /></a>
@@ -180,7 +180,7 @@
           </li>
 
           <li>
-            <a href="./bio.html" style="text-decoration: none"
+            <a href="https://drive.google.com/file/d/1yKP6Wr5qEm62AT5oiXWWEtA9xNwFP_9L/view?usp=sharing" style="text-decoration: none"
               ><h1>RESUME</h1></a
             >
           </li>
