--- a/portfolio/website.html
+++ b/portfolio/website.html
@@ -159,25 +159,25 @@
     <div class="header">
       <div class="sidenav">
         <ul>
-          <a href="/index.html" style="text-decoration: none"
+          <a href="./index.html" style="text-decoration: none"
             ><img
-              src="https://cdn.glitch.global/0ec6ce21-231c-4146-8e5a-e5718f5a22f1/namelogo.png?v=1648787732597"
+              src="./resource/namelogo.png"
               alt="logo"
               style="100%"
           /></a>
 
           <li>
-            <a href="/portfolio/works.html" style="text-decoration: none"
+            <a href="./portfolio/works.html" style="text-decoration: none"
               ><h1>WORKS</h1></a
             >
           </li>
 
           <li>
-            <a href="/bio.html" style="text-decoration: none"><h1>ABOUT</h1></a>
+            <a href="./bio.html" style="text-decoration: none"><h1>ABOUT</h1></a>
           </li>
 
           <li>
-            <a href="/bio.html" style="text-decoration: none"
+            <a href="https://drive.google.com/file/d/1yKP6Wr5qEm62AT5oiXWWEtA9xNwFP_9L/view?usp=sharing" style="text-decoration: none"
               ><h1>RESUME</h1></a
             >
           </li>
@@ -197,33 +197,33 @@
     <main role="main" class="container">
       <div class="section">
            <img
-              src="https://cdn.glitch.global/0ec6ce21-231c-4146-8e5a-e5718f5a22f1/websiteline.png?v=1649148793084"
+              src="./resource/websiteline.png"
               alt="portfolio line"
               width="100%"
                  />
         <div class="row">
-         <a href="/index.html" style="text-decoration: none"
+         <a href="https://soin0430.github.io/starbucks.redo/" style="text-decoration: none"
               > <img
-            src="https://cdn.glitch.global/0ec6ce21-231c-4146-8e5a-e5718f5a22f1/click.png?v=1649137079861"
+            src="./resource/click.png"
             width="100%"
                      /></a>
         </div>
         
         <div class="row">
           <img
-            src="https://cdn.glitch.global/0ec6ce21-231c-4146-8e5a-e5718f5a22f1/new7.jpg?v=1649137082737"
+            src="./resource/new7.jpg"
             width="100%"
           />
         </div>
         <div class="row">
           <img
-            src="https://cdn.glitch.global/0ec6ce21-231c-4146-8e5a-e5718f5a22f1/menu1.jpg?v=1649137112251"
+            src="./resource/menu1.jpg"
             width="100%"
           />
         </div>
         <div class="row">
           <img
-            src="https://cdn.glitch.global/0ec6ce21-231c-4146-8e5a-e5718f5a22f1/order1.png?v=1649137102636"
+            src="./resource/order1.png"
             width="100%"
           />
         </div>
